Bug 157753 - 'Protocol not supported' error message on middle click in tabs
Summary: 'Protocol not supported' error message on middle click in tabs
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: tabbing (other bugs)
Version First Reported In: 4.0.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-13 00:42 UTC by Ralph Janke
Modified: 2011-10-31 18:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Janke 2008-02-13 00:42:24 UTC
Version:            4:4.0.1-0ubuntu2 (using KDE 4.0.1)
Installed from:    Ubuntu Packages
OS:                Linux

This is a forwarded report from Kubuntu (https://bugs.launchpad.net/ubuntu/+source/kdebase-kde4/+bug/186968):

To reproduce:
 - Open a webpage
 - Middle-click the tab
 - Observe the error-dialog stating: "Protocol not supported"

Note: this only happens if either the clipboard content is no URL, or if it is empty.

Expected behaviour is that an error message does appear, to explain that the clipboard is empty, so one knows why the middle click isn't working. Maybe even check whether the item in the clipboard is a URL at all, and output an appropriate error message if it isn't.
Comment 1 A. Spehr 2009-05-16 23:18:33 UTC
true in trunk ~4.2.71
Comment 2 FiNeX 2010-08-03 18:05:37 UTC
Bug confirmed in KDE 4.4.5
Comment 3 David Heijkamp 2011-01-01 20:15:18 UTC
The problem only occurs when you don't have a default search engine configured under Web Shortcuts. The same behaviour happens when -- without a default search engine configured -- you enter a non-URL in the address bar.

N.B. Checked with KDE SC 4.5.4 / Qt 4.7.1 / Fedora 14.
Comment 4 Dawit Alemayehu 2011-10-25 15:16:36 UTC
Git commit b1b13ebbfdde78248297d286ad454b19d08666a0 by Dawit Alemayehu.
Committed on 21/10/2011 at 19:15.
Pushed by adawit into branch 'KDE/4.7'.

- Prevent KonqMisc::konqFilteredURL from reparsing _url when the filtering test fails.
  Since the filtering failure means _url is definitely invalid.

- Prevent both KonqFrameTabs::slotMouseMiddleClick functions from opening a URL when
  it is not valid or is an error URL.

BUG: 157753
FIXED-IN: 4.7.3
REVIEW: 102931

M  +12   -13   konqueror/src/konqmisc.cpp
M  +3    -3    konqueror/src/konqtabs.cpp

http://commits.kde.org/kde-baseapps/b1b13ebbfdde78248297d286ad454b19d08666a0
Comment 5 Dawit Alemayehu 2011-10-31 18:31:27 UTC
Git commit 934607bda94cae74531d1ea4628b6cc0e38de01e by Dawit Alemayehu.
Committed on 21/10/2011 at 19:15.
Pushed by adawit into branch 'master'.

- Prevent KonqMisc::konqFilteredURL from reparsing _url when the filtering test fails.
  Since the filtering failure means _url is definitely invalid.

- Prevent both KonqFrameTabs::slotMouseMiddleClick functions from opening a URL when
  it is not valid or is an error URL.

BUG: 157753
FIXED-IN: 4.7.3
REVIEW: 102931
(cherry picked from commit b1b13ebbfdde78248297d286ad454b19d08666a0)

M  +12   -13   konqueror/src/konqmisc.cpp
M  +3    -3    konqueror/src/konqtabs.cpp

http://commits.kde.org/kde-baseapps/934607bda94cae74531d1ea4628b6cc0e38de01e