- Prevent KonqMisc::konqFilteredURL from reparsing _url when the filtering test fails.   Since the filtering failure means _url is definitely invalid.

- Prevent both KonqFrameTabs::slotMouseMiddleClick functions from opening a URL when
  it is not valid or is an error URL.

BUG: 157753
FIXED-IN: 4.7.3
REVIEW: 102931
(cherry picked from commit b1b13ebbfdde78248297d286ad454b19d08666a0)